aarch64: Hello World crashes with fastdebug build

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b122
    • aarch64
    • linux

      Hi,

      The following test program

      --- cut here ---
      public class Hello {
      public static void main(String[] args) {
      System.out.println("Hello, World\n");
      }
      }
      --- cut here ---

      When run as follows with a fastdebug build (built from the tip of the hs-comp repo with no patches applied)

      /home/ed/images/jdk9-orig-fastdebug/bin/java -Xcomp -XX:-TieredCompilation Hello

      generates the following error

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/matcher.cpp:1572
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/ed/jdk9/hs-comp/hotspot/src/share/vm/opto/matcher.cpp:1572), pid=14902, tid=15054
      # assert(false) failed: bad AD file
      #
      # JRE version: OpenJDK Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-05-17-145011.ed.hs-comp)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 9-internal+0-2016-05-17-145011.ed.hs-comp, compiled mode, compressed oops, g1 gc, linux-aarch64)
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # An error report file with more information is saved as:
      # /home/ed/tmp/hasneg/hs_err_pid14902.log
      #
      # Compiler replay data is saved as:
      # /home/ed/tmp/hasneg/replay_pid14902.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      Here is the full log

      o320 StrIndexOf === o335 o7 o353 o354 [[o321 o309 o326 143 ]]

      --N: o320 StrIndexOf === o335 o7 o353 o354 [[o321 o309 o326 143 ]]

         --N: o353 Binary === _ o176 o171 [[o320 ]]
         _Binary_iRegP_R1_iRegI_R2 0 _Binary_iRegP_R1_iRegI_R2
         _Binary_iRegP_R3_iRegI_R4 0 _Binary_iRegP_R3_iRegI_R4
         _Binary_iRegP_R1_iRegI_R4 0 _Binary_iRegP_R1_iRegI_R4
         _Binary_iRegP_R3_iRegI_R2 0 _Binary_iRegP_R3_iRegI_R2
         _Binary_iRegP_R1_iRegI_R3 0 _Binary_iRegP_R1_iRegI_R3

            --N: o176 AddP === _ o10 o177 o172 [[o351 o353 ]]
            IREGP 0 IREGP
            IREGPNOSP 0 IREGPNOSP
            IREGP_R0 0 IREGP_R0
            IREGP_R1 0 IREGP_R1
            IREGP_R2 0 IREGP_R2
            IREGP_R3 0 IREGP_R3
            IREGP_R4 0 IREGP_R4
            IREGP_R5 0 IREGP_R5
            IREGP_R10 0 IREGP_R10
            IREGP_FP 0 IREGP_FP
            INLINE_CACHE_REGP 0 INLINE_CACHE_REGP
            INTERPRETER_METHOD_OOP_REGP 0 INTERPRETER_METHOD_OOP_REGP
            THREAD_REGP 0 THREAD_REGP
            LR_REGP 0 LR_REGP
            INDIRECT 0 INDIRECT
            VMEM4 0 INDIRECT
            VMEM8 0 INDIRECT
            VMEM16 0 INDIRECT
            MEMORY 0 INDIRECT

            --N: o171 SubI === _ o12 o344 [[o180 o232 o351 o353 ]]
            IREGI 0 IREGI
            IREGINOSP 0 IREGINOSP
            IREGI_R0 0 IREGI_R0
            IREGI_R2 0 IREGI_R2
            IREGI_R3 0 IREGI_R3
            IREGI_R4 0 IREGI_R4
            IREGIHEAPBASE 0 IREGIHEAPBASE
            IREGIORL2I 0 IREGI

         --N: o354 Binary === _ o178 o119 [[o320 ]]
         _Binary_iRegP_R1_iRegI_R2 0 _Binary_iRegP_R1_iRegI_R2
         _Binary_iRegP_R3_iRegI_R4 0 _Binary_iRegP_R3_iRegI_R4
         _Binary_iRegP_R1_iRegI_R4 0 _Binary_iRegP_R1_iRegI_R4
         _Binary_iRegP_R3_iRegI_R2 0 _Binary_iRegP_R3_iRegI_R2
         _Binary_iRegP_R1_iRegI_R3 0 _Binary_iRegP_R1_iRegI_R3

            --N: o178 AddP === _ o45 o45 o172 [[o352 o354 ]]
            IREGP 0 IREGP
            IREGPNOSP 0 IREGPNOSP
            IREGP_R0 0 IREGP_R0
            IREGP_R1 0 IREGP_R1
            IREGP_R2 0 IREGP_R2
            IREGP_R3 0 IREGP_R3
            IREGP_R4 0 IREGP_R4
            IREGP_R5 0 IREGP_R5
            IREGP_R10 0 IREGP_R10
            IREGP_FP 0 IREGP_FP
            INLINE_CACHE_REGP 0 INLINE_CACHE_REGP
            INTERPRETER_METHOD_OOP_REGP 0 INTERPRETER_METHOD_OOP_REGP
            THREAD_REGP 0 THREAD_REGP
            LR_REGP 0 LR_REGP
            INDIRECT 0 INDIRECT
            VMEM4 0 INDIRECT
            VMEM8 0 INDIRECT
            VMEM16 0 INDIRECT
            MEMORY 0 INDIRECT

            --N: o119 RShiftI === _ o98 o64 [[o303 o296 o288 o232 o127 o225 o202 o352 o354 ]]
            IREGI 0 IREGI
            IREGINOSP 0 IREGINOSP
            IREGI_R0 0 IREGI_R0
            IREGI_R2 0 IREGI_R2
            IREGI_R3 0 IREGI_R3
            IREGI_R4 0 IREGI_R4
            IREGIHEAPBASE 0 IREGIHEAPBASE
            IREGIORL2I 0 IREGI

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/matcher.cpp:1572
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/ed/jdk9/hs-comp/hotspot/src/share/vm/opto/matcher.cpp:1572), pid=14902, tid=15054
      # assert(false) failed: bad AD file
      #
      # JRE version: OpenJDK Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-05-17-145011.ed.hs-comp)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 9-internal+0-2016-05-17-145011.ed.hs-comp, compiled mode, compressed oops, g1 gc, linux-aarch64)
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # An error report file with more information is saved as:
      # /home/ed/tmp/hasneg/hs_err_pid14902.log
      #
      # Compiler replay data is saved as:
      # /home/ed/tmp/hasneg/replay_pid14902.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #


            Assignee:
            Andrew Haley
            Reporter:
            Ed Nevill
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: