8157834: aarch64: Hello World crashes with fastdebug build

Support LL, UL and LU encodings of StrIndexOf

Reviewed-by: aph